/cp 2018-03-05  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/84618
	* parser.c (cp_parser_lambda_introducer): Reject any capture not
	involving a VAR_DECL or a PARM_DECL.

/testsuite
2018-03-05  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/84618
	* g++.dg/cpp0x/lambda/lambda-ice29.C: New.
	* g++.dg/cpp0x/lambda/lambda-ice17.C: Adjust.
	* g++.dg/cpp0x/lambda/lambda-ice23.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258250 138bc75d-0d04-0410-961f-82ee72b054a4